--- a/views/index.html
+++ b/views/index.html
@@ -5,6 +5,7 @@ Developed by Arijit Chatterjee -->
 <html ng-app="myDemoApp">
   <head>
     <meta charset="utf-8">
+    <base href="/">
     <title>Login Page</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="ajax based signup form infotuts">
